Wireshark et les protocoles principaux

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -20,6 +20,8 @@ nav:
       - Les shells : 'metasploit_msfvenom.md'
     - Hydra :
       - Les bases : 'hydra_bases.md'
+    - Wireshark :
+      - Les bases : 'wireshark_bases.md'
     
 
   - Exploits :
