--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -18,6 +18,7 @@ nav:
       - Les bases : 'metasploit_bases.md'
       - Les exploits : 'metasploit_exploits.md'
       - Les shells : 'metasploit_msfvenom.md'
+      - Les post-exploits : 'metasploit_meterpreter.md'
     - Hydra :
       - Les bases : 'hydra_bases.md'
     - Wireshark :
@@ -32,6 +33,7 @@ nav:
       - NFS : 'NFS_exploit_bases.md'
       - SSH : 'SSH_exploit_bases.md'
       - SMTP : 'SMTP_exploit_bases.md'
+
     - Autre services :
       - MySQL : 'MySQL_exploit_bases.md'
 
