--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -34,6 +34,8 @@ nav:
       - Les bases : 'wireshark_bases.md'
     - Nessus : 
       - Les bases : 'nessus_bases.md'
+    - BurpSuite : 
+      - Les bases : 'burpsuite_bases.md'
 
   - Les protocoles :
     - SMB : 'SMB_exploit_bases.md'
